--- a/RAEDA_crossplatform/app.json
+++ b/RAEDA_crossplatform/app.json
@@ -8,9 +8,9 @@
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#1d011f"
     },
     "ios": {
       "supportsTablet": true,
@@ -18,14 +18,23 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/icon.png",
+        "backgroundColor": "#1d011f"
       },
       "edgeToEdgeEnabled": true,
       "package": "com.adarasharmila.raeda"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "42c4f9b0-f06f-4cb9-997e-7f9afaf1cd57"
+      }
+    },
+    "runtimeVersion": "1.0.0",
+    "updates": {
+      "url": "https://u.expo.dev/42c4f9b0-f06f-4cb9-997e-7f9afaf1cd57"
     }
   }
 }
