--- a/RAEDA_crossplatform/ios/RAEDAcrossplatform/Supporting/Expo.plist
+++ b/RAEDA_crossplatform/ios/RAEDAcrossplatform/Supporting/Expo.plist
@@ -5,8 +5,12 @@
     <key>EXUpdatesCheckOnLaunch</key>
     <string>ALWAYS</string>
     <key>EXUpdatesEnabled</key>
-    <false/>
+    <true/>
     <key>EXUpdatesLaunchWaitMs</key>
     <integer>0</integer>
+    <key>EXUpdatesURL</key>
+    <string>https://u.expo.dev/42c4f9b0-f06f-4cb9-997e-7f9afaf1cd57</string>
+    <key>EXUpdatesRuntimeVersion</key>
+    <string>1.0.0</string>
   </dict>
 </plist>
