--- a/RAEDA_crossplatform/package.json
+++ b/RAEDA_crossplatform/package.json
@@ -14,13 +14,15 @@
     "expo": "~53.0.9",
     "expo-dev-client": "^5.1.8",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.13",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eas-cli": "^16.7.0"
   },
   "private": true
 }
